HAT-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hat-air-external-svc
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/api/v1"
spec:
  selector:
    app: hat-be-air-external
  type: NodePort
  ports:
    - name: air-port
      port: 80 # 서비스가 생성할 포트
      targetPort: 9000 # 서비스가 접근할 pod의 포트
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: hat-community-external-svc
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/api/v1"
spec:
  selector:
    app: hat-be-community-external
  type: NodePort
  ports:
    - name: community-port
      port: 80
      targetPort: 10000
      protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: hat-member-external-svc
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/api/v1"
spec:
  selector:
    app: hat-be-member-external
  type: NodePort
  ports:
    - name: member-port
      port: 80
      targetPort: 11000
      protocol: TCP
