FE-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hat-fe-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'  # HTTPS listen-ports 부분 삭제
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hat-fe-svc
                port:
                  number: 80
